force-app/main/default/objects/SVMXC__SM_SB_Queue_Outbound__c/fields/SVMXC__SM_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Error_Log__c</fullName>
    <description>This field has the error details which was encountered during real time sync of records to Service Board.</description>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>