force-app/main/default/objects/SVMXC__SM_SB_Queue_Outbound__c/fields/SVMXC__SM_Record_to_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Record_to_Dispatch__c</fullName>
    <description>This field stores the id of the record which is being synced.</description>
    <label>Record to Dispatch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>