force-app/main/default/objects/SVMXC__SM_SB_Queue_Outbound__c/fields/SVMXC__SM_Response_Received_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Response_Received_On__c</fullName>
    <description>The time at which the response is received.</description>
    <label>Response Received On</label>
    <length>100</length>
    <type>Text</type>
</CustomField>