force-app/main/default/objects/SVMXC__SM_SB_Queue_Outbound__c/fields/SVMXC__SM_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Status__c</fullName>
    <description>The status of the record which was tried to send to Service Board.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>