force-app/main/default/objects/SVMXC__SM_SB_Queue_Outbound__c/listViews/SVMXC__Recent_Outbound_Queue_All.listView-meta.xml
<ListView>
    <fullName>SVMXC__Recent_Outbound_Queue_All</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__SM_Event_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SVMXC__SM_Record_to_Dispatch__c</columns>
    <columns>SVMXC__SM_Status__c</columns>
    <columns>SVMXC__SM_Error_Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:6</value>
    </filters>
    <label>Recent Outbound Queue - All</label>
    <language>en_US</language>
</ListView>